--- a/portfolio.html
+++ b/portfolio.html
@@ -18,39 +18,43 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header>
-      <div class="container menu">
-        <div class="menu-contact">
-          <a href="index.html" class="menu-link-logo-top"
-            ><span class="menu-logo">Web</span>Studio</a
+    <header class="page-header">
+      <div class="container page-header__menu">
+        <div class="page-header__navigation">
+          <a href="index.html" class="logo--header"
+            ><span class="logo">Web</span>Studio</a
           >
           <nav class="navigation">
-            <ul class="list">
-              <li><a href="index.html" class="navigation-link">Agencja</a></li>
+            <ul class="navigation__list">
               <li>
-                <a href="portfolio.html" class="navigation-link link-active"
+                <a href="index.html" class="navigation__link">Agencja</a>
+              </li>
+              <li>
+                <a
+                  href="portfolio.html"
+                  class="navigation__link navigation__link--active"
                   >Portfolio</a
                 >
               </li>
-              <li><a href="/kontakt" class="navigation-link">Kontakt</a></li>
+              <li><a href="/kontakt" class="navigation__link">Kontakt</a></li>
             </ul>
           </nav>
         </div>
-        <ul class="contact-links">
+        <ul class="contact">
           <li>
-            <a href="mailto:info@devstudio.com" class="contact-link">
-              <svg class="icon" width="16px" height="12px">
+            <a href="mailto:info@devstudio.com" class="contact__link-header">
+              <svg class="contact__icon" width="16px" height="12px">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+48111111111" class="contact-link">
-              <svg class="icon" width="10px" height="16px">
+            <a href="tel:+48111111111" class="contact__link-header">
+              <svg class="contact__icon" width="10px" height="16px">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +48 111 111 111</a
@@ -62,27 +66,27 @@
     <main>
       <div class="section">
         <div class="container">
-          <ul class="filter">
+          <ul class="button__grid">
             <li>
-              <button type="button" class="filter-name">Wszystkie</button>
+              <button type="button" class="button__grid-filter">Wszystkie</button>
             </li>
-            <li><button type="button" class="filter-name">Strony</button></li>
+            <li><button type="button" class="button__grid-filter">Strony</button></li>
             <li>
-              <button type="button" class="filter-name">Aplikacje</button>
+              <button type="button" class="button__grid-filter">Aplikacje</button>
             </li>
-            <li><button type="button" class="filter-name">Dizajn</button></li>
+            <li><button type="button" class="button__grid-filter">Dizajn</button></li>
             <li>
-              <button type="button" class="filter-name">Marketing</button>
+              <button type="button" class="button__grid-filter">Marketing</button>
             </li>
           </ul>
         </div>
         <div class="container">
-          <ul class="list-portfolio">
+          <ul class="grid__portfolio">
             <li>
-              <figure class="list-portfolio-item">
-                <div class="container-transform">
+              <figure class="grid__portfolio-item">
+                <div class="transform">
                   <img
-                    class="portfolio-img"
+                    class="grid__portfolio-img"
                     src="images/technocrack.jpg"
                     alt="strona internetowa technocrack"
                     width="370"
@@ -97,17 +101,17 @@
                     </p>
                   </div>
                 </div>
-                <figcaption class="portfolio-item">
-                  <h3 class="portfolio-name">Technocrack</h3>
-                  <span class="portfolio-type">Strona internetowa</span>
+                <figcaption class="grid__portfolio-dsc">
+                  <h3 class="grid__portfolio-name">Technocrack</h3>
+                  <span class="grid__portfolio-text">Strona internetowa</span>
                 </figcaption>
               </figure>
             </li>
             <li>
-              <figure class="list-portfolio-item">
-                <div class="container-transform">
+              <figure class="grid__portfolio-item">
+                <div class="transform">
                   <img
-                    class="portfolio-img"
+                    class="grid__portfolio-img"
                     src="images/grafika-new-orlean.jpg"
                     alt="projekt graficzny"
                     width="370"
@@ -122,19 +126,19 @@
                     </p>
                   </div>
                 </div>
-                <figcaption class="portfolio-item">
-                  <h3 class="portfolio-name">
+                <figcaption class="grid__portfolio-dsc">
+                  <h3 class="grid__portfolio-name">
                     Grafika New Orlean vs Golden Star
                   </h3>
-                  <span class="portfolio-type">Dizajn</span>
+                  <span class="grid__portfolio-text">Dizajn</span>
                 </figcaption>
               </figure>
             </li>
             <li>
-              <figure class="list-portfolio-item">
-                <div class="container-transform">
+              <figure class="grid__portfolio-item">
+                <div class="transform">
                   <img
-                    class="portfolio-img"
+                    class="grid__portfolio-img"
                     src="images/restauracja-seafood.jpg"
                     alt="aplikacja restauracji seafood"
                     width="370"
@@ -149,17 +153,17 @@
                     </p>
                   </div>
                 </div>
-                <figcaption class="portfolio-item">
-                  <h3 class="portfolio-name">Restauracja Seafood</h3>
-                  <span class="portfolio-type">Aplikacja</span>
+                <figcaption class="grid__portfolio-dsc">
+                  <h3 class="grid__portfolio-name">Restauracja Seafood</h3>
+                  <span class="grid__portfolio-text">Aplikacja</span>
                 </figcaption>
               </figure>
             </li>
             <li>
-              <figure class="list-portfolio-item">
-                <div class="container-transform">
+              <figure class="grid__portfolio-item">
+                <div class="transform">
                   <img
-                    class="portfolio-img"
+                    class="grid__portfolio-img"
                     src="images/projekt-prime.jpg"
                     alt="marketing projektu prime"
                     width="370"
@@ -174,17 +178,17 @@
                     </p>
                   </div>
                 </div>
-                <figcaption class="portfolio-item">
-                  <h3 class="portfolio-name">Projekt Prime</h3>
-                  <span class="portfolio-type">Marketing</span>
+                <figcaption class="grid__portfolio-dsc">
+                  <h3 class="grid__portfolio-name">Projekt Prime</h3>
+                  <span class="grid__portfolio-text">Marketing</span>
                 </figcaption>
               </figure>
             </li>
             <li>
-              <figure class="list-portfolio-item">
-                <div class="container-transform">
+              <figure class="lgrid__portfolio-item">
+                <div class="transform">
                   <img
-                    class="portfolio-img"
+                    class="grid__portfolio-img"
                     src="images/projekt-boxes.jpg"
                     alt="aplikacja projektu boxes"
                     width="370"
@@ -199,17 +203,17 @@
                     </p>
                   </div>
                 </div>
-                <figcaption class="portfolio-item">
-                  <h3 class="portfolio-name">Projekt Boxes</h3>
-                  <span class="portfolio-type">Aplikacja</span>
+                <figcaption class="grid__portfolio-dsc">
+                  <h3 class="grid__portfolio-name">Projekt Boxes</h3>
+                  <span class="grid__portfolio-text">Aplikacja</span>
                 </figcaption>
               </figure>
             </li>
             <li>
-              <figure class="list-portfolio-item">
-                <div class="container-transform">
+              <figure class="grid__portfolio-item">
+                <div class="transform">
                   <img
-                    class="portfolio-img"
+                    class="grid__portfolio-img"
                     src="images/inspiration-borders.jpg"
                     alt="strona internetowa inspiration has no borders"
                     width="370"
@@ -224,17 +228,17 @@
                     </p>
                   </div>
                 </div>
-                <figcaption class="portfolio-item">
-                  <h3 class="portfolio-name">Inspiration has no Borders</h3>
-                  <span class="portfolio-type">Strona internetowa</span>
+                <figcaption class="grid__portfolio-dsc">
+                  <h3 class="grid__portfolio-name">Inspiration has no Borders</h3>
+                  <span class="grid__portfolio-text">Strona internetowa</span>
                 </figcaption>
               </figure>
             </li>
             <li>
-              <figure class="list-portfolio-item">
-                <div class="container-transform">
+              <figure class="grid__portfolio-item">
+                <div class="transform">
                   <img
-                    class="portfolio-img"
+                    class="grid__portfolio-img"
                     src="images/magazyn-lm.jpg"
                     alt="oprojekt graficzny magazynu limited edition"
                     width="370"
@@ -249,17 +253,17 @@
                     </p>
                   </div>
                 </div>
-                <figcaption class="portfolio-item">
-                  <h3 class="portfolio-name">Magazyn Limited Edition</h3>
-                  <span class="portfolio-type">Dizajn</span>
+                <figcaption class="grid__portfolio-dsc">
+                  <h3 class="grid__portfolio-name">Magazyn Limited Edition</h3>
+                  <span class="grid__portfolio-text">Dizajn</span>
                 </figcaption>
               </figure>
             </li>
             <li>
-              <figure class="list-portfolio-item">
-                <div class="container-transform">
+              <figure class="grid__portfolio-item">
+                <div class="transform">
                   <img
-                    class="portfolio-img"
+                    class="grid__portfolio-img"
                     src="images/projekt-lab.jpg"
                     alt="marketing projektu lab"
                     width="370"
@@ -274,17 +278,17 @@
                     </p>
                   </div>
                 </div>
-                <figcaption class="portfolio-item">
-                  <h3 class="portfolio-name">Projekt LAB</h3>
-                  <span class="portfolio-type">Marketing</span>
+                <figcaption class="grid__portfolio-dsc">
+                  <h3 class="grid__portfolio-name">Projekt LAB</h3>
+                  <span class="grid__portfolio-text">Marketing</span>
                 </figcaption>
               </figure>
             </li>
             <li>
-              <figure class="list-portfolio-item">
-                <div class="container-transform">
+              <figure class="grid__portfolio-item">
+                <div class="transform">
                   <img
-                    class="portfolio-img"
+                    class="grid__portfolio-img"
                     src="images/growing-business.jpg"
                     alt="aplikacja growing business"
                     width="370"
@@ -299,9 +303,9 @@
                     </p>
                   </div>
                 </div>
-                <figcaption class="portfolio-item">
-                  <h3 class="portfolio-name">Growing Business</h3>
-                  <span class="portfolio-type">Aplikacja</span>
+                <figcaption class="grid__portfolio-dsc">
+                  <h3 class="grid__portfolio-name">Growing Business</h3>
+                  <span class="grid__portfolio-text">Aplikacja</span>
                 </figcaption>
               </figure>
             </li>
@@ -309,43 +313,43 @@
         </div>
       </div>
     </main>
-    <footer class="bottom-contact">
-      <div class="container bottom-contact-container">
+    <footer class="contact__footer">
+      <div class="container contact__footer-container">
         <div>
-          <a href="index.html" class="menu-link-logo-bottom"
-            ><span class="menu-logo">Web</span>Studio</a
+          <a href="index.html" class="logo--footer"
+            ><span class="logo">Web</span>Studio</a
           >
-          <address class="contact">
-            <span class="contact-address"
+          <address class="contact__footer-address">
+            <span class="contact__address"
               >m. Warszawa, Aleje Jerozolimskie 21</span
             >
-            <a href="mailto:info@devstudio.com" class="contact-link-bottom"
+            <a href="mailto:info@devstudio.com" class="contact__link-footer"
               >info@devstudio.com</a
             >
-            <a href="tel:+48111111111" class="contact-link-bottom"
+            <a href="tel:+48111111111" class="contact__link-footer"
               >+48 111 111 111</a
             >
           </address>
         </div>
-        <div class="join-us">
-          <h3 class="join-us-text">DOŁĄCZ DO NAS</h3>
-          <div class="social-footer">
-            <a href="#" class="social-link-footer"
+        <div class="contact__footer-join-us">
+          <h3 class="contact__footer-join-us-title">DOŁĄCZ DO NAS</h3>
+          <div class="social-media__footer">
+            <a href="#" class="social-media__link-footer"
               ><svg width="20px" height="20px">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
-            <a href="#" class="social-link-footer"
+            <a href="#" class="social-media__link-footer"
               ><svg width="20px" height="20px">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
-            <a href="#" class="social-link-footer"
+            <a href="#" class="social-media__link-footer"
               ><svg width="20px" height="20px">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
-            <a href="#" class="social-link-footer"
+            <a href="#" class="social-media__link-footer"
               ><svg width="20px" height="20px">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
@@ -353,17 +357,17 @@
           </div>
         </div>
         <form name="singup-form" class="newsletter">
-          <label class="newsletter-text"
+          <label class="newsletter__title"
             >ZAPISZ SIĘ DO NEWSLETTERA
             <input
-              class="newsletter-input"
+              class="newsletter__input"
               type="email"
               name="email"
               placeholder="E-mail"
           /></label>
-          <button type="submit" class="button-send">
+          <button type="submit" class="button__send">
             Zapisz się
-            <svg width="24px" height="24px" class="newsletter-icon">
+            <svg width="24px" height="24px" class="newsletter__icon">
               <use href="./images/icons.svg#icon-send"></use>
             </svg>
           </button>
