--- a/portfolio.html
+++ b/portfolio.html
@@ -68,15 +68,25 @@
         <div class="container">
           <ul class="button__grid">
             <li>
-              <button type="button" class="button__grid-filter">Wszystkie</button>
+              <button type="button" class="button__grid-filter">
+                Wszystkie
+              </button>
             </li>
-            <li><button type="button" class="button__grid-filter">Strony</button></li>
             <li>
-              <button type="button" class="button__grid-filter">Aplikacje</button>
+              <button type="button" class="button__grid-filter">Strony</button>
             </li>
-            <li><button type="button" class="button__grid-filter">Dizajn</button></li>
             <li>
-              <button type="button" class="button__grid-filter">Marketing</button>
+              <button type="button" class="button__grid-filter">
+                Aplikacje
+              </button>
+            </li>
+            <li>
+              <button type="button" class="button__grid-filter">Dizajn</button>
+            </li>
+            <li>
+              <button type="button" class="button__grid-filter">
+                Marketing
+              </button>
             </li>
           </ul>
         </div>
@@ -185,7 +195,7 @@
               </figure>
             </li>
             <li>
-              <figure class="lgrid__portfolio-item">
+              <figure class="grid__portfolio-item">
                 <div class="transform">
                   <img
                     class="grid__portfolio-img"
@@ -229,7 +239,9 @@
                   </div>
                 </div>
                 <figcaption class="grid__portfolio-dsc">
-                  <h3 class="grid__portfolio-name">Inspiration has no Borders</h3>
+                  <h3 class="grid__portfolio-name">
+                    Inspiration has no Borders
+                  </h3>
                   <span class="grid__portfolio-text">Strona internetowa</span>
                 </figcaption>
               </figure>
