--- a/index.html
+++ b/index.html
@@ -82,38 +82,43 @@
                 Zostaw swoje dane w formularzu poniżej
               </h3>
               <form class="modal__form">
-                <span>Imię</span>
-                <label class="modal__form-input">
-                  <svg width="18px" height="18px" class="modal__icon">
-                    <use href="./images/icons.svg#icon-person-black"></use>
-                  </svg>
-                  <input type="text" name="name" class="modal__input" />
+                <label>
+                  <span>Imię</span>
+                  <span class="modal__form-input">
+                    <svg width="18px" height="18px" class="modal__icon">
+                      <use href="./images/icons.svg#icon-person-black"></use>
+                    </svg>
+                    <input type="text" name="name" class="modal__input" />
+                  </span>
                 </label>
-                <span>Telefon</span>
-                <label class="modal__form-input">
-                  <svg width="18px" height="18px" class="modal__icon">
-                    <use href="./images/icons.svg#icon-phone-black"></use>
-                  </svg>
-                  <input type="tel" name="telephone" class="modal__input" />
+                <label
+                  ><span>Telefon</span>
+                  <span class="modal__form-input">
+                    <svg width="18px" height="18px" class="modal__icon">
+                      <use href="./images/icons.svg#icon-phone-black"></use>
+                    </svg>
+                    <input type="tel" name="telephone" class="modal__input" />
+                  </span>
                 </label>
-                <span>E-mail</span>
-                <label class="modal__form-input">
-                  <svg width="18px" height="18px" class="modal__icon">
-                    <use href="./images/icons.svg#icon-email-black"></use>
-                  </svg>
-                  <input
-                    type="email"
-                    name="email"
-                    class="modal__input"
-                  /> </label
-                ><span>Komentarz</span>
-                <label class="modal__form-input">
-                  <textarea
-                    name="comment"
-                    rows="6"
-                    placeholder="Wprowadź tekst"
-                    class="modal__input"
-                  ></textarea>
+                <label
+                  ><span>E-mail</span>
+                  <span class="modal__form-input">
+                    <svg width="18px" height="18px" class="modal__icon">
+                      <use href="./images/icons.svg#icon-email-black"></use>
+                    </svg>
+                    <input type="email" name="email" class="modal__input" />
+                  </span>
+                </label>
+                <label
+                  ><span>Komentarz</span>
+                  <span class="modal__form-input">
+                    <textarea
+                      name="comment"
+                      rows="6"
+                      placeholder="Wprowadź tekst"
+                      class="modal__input"
+                    ></textarea>
+                  </span>
                 </label>
                 <div class="checkbox">
                   <input
